--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -15,6 +15,7 @@
 /* Import Modules */
 @import
     'modules/global/_module',
+    'modules/themes/_module',
     'modules/animations/_module',
     'modules/layers/_module',
     'modules/_reset',
@@ -22,6 +23,7 @@
     'modules/shapes/_module',
     'modules/lighting/_module',
     'modules/media/_module',
+    'modules/flex/_module',
     'modules/grid/_module',
     'modules/icons/_module',
     'modules/type/_module',
@@ -32,8 +34,7 @@
     'modules/fields/_module',
     'modules/tables/_module',
     'modules/states/_module',
-    'modules/panels/_module',
-    'modules/themes/_module';
+    'modules/panels/_module';
     /* 'modules/_tabs'; */
     /* 'modules/_dropdowns'; */
     /* 'modules/_alerts'; */
