--- a/scss/modules/forms/_themes.scss
+++ b/scss/modules/forms/_themes.scss
@@ -21,7 +21,7 @@
 
 	$type-color: $color-gray,
 	$type-color-hover: $color-gray,
-	$type-color-focus: $type-base-color-dark
+	$type-color-focus: $text-color-dark
 ) {
 	border-color: $border-color;
 	color: $type-color;
