--- a/scss/modules/nav/_module.scss
+++ b/scss/modules/nav/_module.scss
@@ -5,14 +5,20 @@
 // Navigation Settings
 $nav-style: default !default;
 $nav-theme: default !default;
-$nav-color: $type-anchor-color !default;
-$nav-list-padding: 0 !default;
-$nav-list-item-padding: 0 !default;
-$nav-anchor-padding: 0.5rem !default;
-$nav-header-padding: $nav-anchor-padding !default;
+$nav-color: $anchor-color !default;
+$nav-menu-padding: 0 !default;
+$nav-menu-item-padding: 0 !default;
+$nav-menu-item-link-padding: 0.5rem !default;
+$nav-header-padding: $nav-menu-item-link-padding !default;
 $nav-separator-color: $color-gray-light !default;
 $nav-separator-width: 1px !default;
 $nav-separator-margin: 0.25rem 0 !default;
+
+// Navigation Theme
+$nav-bgcolor-light: $color-light !default;
+$nav-bgcolor-dark: $color-primary !default;
+$nav-color-light: $anchor-color-dark !default;
+$nav-color-dark: $anchor-color-light !default;
 
 // Dropdown Settings
 $dropdown-style: default !default;
@@ -21,10 +27,11 @@ $dropdown-color: $nav-color !default;
 $dropdown-bgcolor: $color-white !default;
 $dropdown-border-color: $color-gray-light !default;
 $dropdown-border-width: $form-border-width !default;
-$dropdown-list-padding: $nav-list-padding !default;
-$dropdown-list-item-padding: $nav-list-item-padding !default;
-$dropdown-anchor-padding: 0.25rem 0.5rem !default;
-$dropdown-header-padding: $dropdown-anchor-padding !default;
+$dropdown-menu-padding: $nav-menu-padding !default;
+$dropdown-menu-item-padding: $nav-menu-item-padding !default;
+$dropdown-menu-item-link-padding: 0.25rem 0.5rem !default;
+$dropdown-menu-item-link-decoration: none !default;
+$dropdown-header-padding: $dropdown-menu-item-link-padding !default;
 $dropdown-separator-color: $nav-separator-color !default;
 $dropdown-separator-width: $nav-separator-width !default;
 $dropdown-separator-margin: $nav-separator-margin !default;
