--- a/docs/views/themes.html
+++ b/docs/views/themes.html
@@ -1,4 +1,6 @@
-<div ng-repeat="theme in ['light','dark','primary','secondary','lighten','darken']" class="row-12 theme-{{theme}} content">
+<div ng-repeat="(theme, bg) in {light: 'primary', dark: 'light'}" class="row-12 theme-{{theme}} bg-{{bg}} content">
     <h1>theme-{{theme}}</h1>
+    <h2 class="subheading">Subheading</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, repudiandae, <a href="#">necessitatibus</a>, quod illum corporis recusandae dignissimos reprehenderit ut asperiores obcaecati qui ipsam? Dolore, nihil possimus animi voluptas provident officiis libero.</p>
+    <p class="subtext">Secondary text.</p>
 </div>
